# cockatiel

./: Cargo.toml
crates/cockatiel/src/: animator.rs
