[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_sprite", "bevy_ui"]}
bevy_log = "0.17"

if_chain = "1.0.2"
hashbrown = { version = "0.16" }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
